--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.github.arttom</groupId>
   <artifactId>cqs-spring-boot-starter</artifactId>
-  <version>0.1</version>
+  <version>0.2-SNAPSHOT</version>
 
   <name>CQS Spring-Boot Starter</name>
   <description>Easy way to follow CQS principle with spring-boot</description>
@@ -37,7 +37,7 @@
     <connection>scm:git:git://github.com/arttom/cqs-spring-boot-starter.git</connection>
     <developerConnection>scm:git:git@github.com/arttom/cqs-spring-boot-starter.git</developerConnection>
     <url>https://github.com/arttom/cqs-spring-boot-starter</url>
-    <tag>cqs-spring-boot-starter-0.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <distributionManagement>
